<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Echat</string>
    <string name="hello_world">Welcome to Echat!</string>
    <string name="tsu1">Login</string>
    <string name="ip">192.168.0.14</string>
    <string name="port">8000</string>
    <string name="Username">Name</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>

</resources>
