<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@android:color/black"
    android:layout_weight="5"
     >

    <ImageView
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:id="@+id/imageView"
    android:src="@drawable/tsu"
    android:gravity="top"
    /> 
    
   <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textColor="#ff9a00"
        android:gravity="center"
        android:textSize="15pt"/>
   <TextView
       android:id="@+id/title2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/tsu1"
       android:gravity="center"
       android:textColor="#827717"
       android:textSize="15pt"/>
   
   <View
        android:layout_width="1dp"
        android:layout_height="50dp"/>
   
   <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip"
        android:hint="IP Address"       
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:hint="Port"
        android:textColor="@android:color/white"/>
    
      <EditText
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="@android:color/white"/> 
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.2">
   </Space>
   
    <Button 
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Connect"
        android:onClick="connectServer"
        android:background="#00B8D4"
        />
<Space
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_weight="0.2">
</Space>
</LinearLayout>
